# uwu

./: .gitignore  Cargo.toml  LICENSE  UWUClient.cs  readme.md  rust-toolchain.toml
src/: id64.rs  main.rs
