[package]
name = "uwu"
version = "0.1.0"
authors = ["Tommaso Checchi <tommaso.checchi1@gmail.com>"]
edition = "2018"
description = "Unity Workflow for UDP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.14"
notify = "4.0.15"
once_cell = "1.17.1"
thiserror = "1.0.40"